Improved responsiveness, fixed overflow issues

--- a/src/assets/css/Sidebar.css
+++ b/src/assets/css/Sidebar.css
@@ -1,12 +1,13 @@
 .sidebar {
     position: absolute;
-    background-color: whitesmoke;
-    width: 22vw;
     height: 94vh;
-    padding: 20px;
     z-index: 1000;
-    text-align: center;
+    padding: 1rem;
+    background-color: whitesmoke;
     box-shadow: 10px 0px 10px 0px rgba(0,0,0,0.1);
+    overflow: auto;
+    overflow-x: hidden;
+    text-align: center;
 }
 
 .sidebar.is-open {
@@ -51,6 +52,10 @@
 
 .logoAndCallsignWrapper {
     text-align: left;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .logoAndCallsignWrapper h3 {
@@ -64,5 +69,6 @@
 }
 
 .sidebar > .card {
-    margin-top: 1em;
+    margin-bottom: 1rem;
+    box-shadow: none;
 }
